# Py16-web-hw04

./: .dockerignore  Dockerfile  error.html  index.html  main.py  message.html  pyproject.toml
data/: data.json
storage/: db.json
templates/: blog.html
